styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind screens;

@layer base {
	@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@600;900&family=Roboto:wght@300;400;500;700&display=swap");

	/* VARIABLES*/
	:root {
		--nav-height: 70px;
	}

	/* GLOBAL DEFUALTS */
	::-moz-selection {
		@apply bg-yellow;
	}
	::selection {
		@apply bg-yellow;
	}

	html,body,div#__next,.page-container {height:100%; width:100%} 
	body>div:first-of-type {
		height:100%;
	}
	body {
		-webkit-font-smoothing: auto;
		font-smoothing: auto;
	}
	section.full-width {
		@apply	pl-0 pr-0;
	}
	a {
		@apply relative
            overflow-hidden
            inline-flex;
	}
	h1 {
		@apply font-boldest
            font-heading
            text-lg
            tablet:text-xl
            desktop:text-2xl 
            uppercase;
	}
	h2 {
		@apply font-bold
            font-heading
            text-md
            laptop:text-2md;
	}

	p {
		@apply font-light
            font-body
            laptop:text-body2 
            desktop:text-body3;
	}
	p:first-of-type {
		@apply mt-5;
	}
	h1,
	h2,
	p,
    a {
		@apply dark:text-white;
	}
	section {
		@apply mt-10 mb-10;
	}
	section:first-of-type {
		@apply mt-0 mb-10;
	}

	button,
	nav a {
		@apply uppercase 
            text-tiny 
            font-black 
            tracking-widest;
	}

	/* GLOBAL STATES */
	button,
	input {
		@apply focus:outline-none;
	}

	/* ANIMATIONS */
	a,
	a:after,
	a:before,
	*::after,
	*::before,
	button,
	button:before,
	button:after {
		@apply transition-all duration-200;
	}
}

@layer components {
	/* CONTAINERS / WRAPPERS */
	main {
    padding: 5rem 0;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
  }
	.page-wrapper {
		padding-top: var(--nav-height);
		min-height:100%;
		@apply dark:bg-black;
	}
	/* NAV */
	header {
		@apply flex
        flex-1
        bg-white
        dark:bg-black
        dark:text-white
        fixed
        top-0
        left-0
        z-50
        w-full;
		height: var(--nav-height);
	}
	nav {
		@apply flex
            justify-between;
	}
	header li:after {
		content: "";
		@apply pointer-events-none
			h-0
            bottom-0
            left-0
            absolute
			
			translate-y-0
            -z-1;
	}
	header li:hover:after {
		/* h-full */
		@apply w-full
			h-full
            bg-green;
	}
	header a:hover {
		@apply dark:text-black;
	}

	/* LINKS */
  
	a.link:before {
		@apply pointer-events-none
            bg-green
            bg-opacity-70
            left-0
            bottom-0
            w-full
            h-full
            absolute
            transform-gpu
            translate-y-85;
		content: "";
		mix-blend-mode: multiply;
	}
	a.link:hover:before {
		@apply translate-y-0;
	}
	.dark a.link:before {
		mix-blend-mode: unset;
	}
	/* BUTTONS */
	button {
		@apply flex 
            items-center 
            justify-center
            w-40
			min-w-min
            h-12
            relative
            overflow-hidden
	}
	button:after {
		@apply pointer-events-none
            left-0
            w-full
            absolute
            transform-gpu;
		content: "";
		height: 1px;
		transform: translateX(-90%);
	}

	button:hover:after {
		transform: translateX(90%);
	}
	button.btn-primary {
		@apply focus:ring 
        focus:ring-yellow
        shadow-offset-brand
        hover:shadow-offset-hover
        bg-black 
        text-white
         border-white;
	}
	button.btn-primary:after {
		@apply bg-white;
	}
	button.btn-primary:hover:after {
		@apply bg-green;
	}
	button.btn-secondary {
		@apply focus:ring 
        focus:ring-yellow
        shadow-none
        bg-white 
        hover:shadow-offset-brand;
	}
	button.btn-secondary:after {
		@apply bg-black;
	}
	button.btn-secondary:hover:after {
		@apply bg-purple;
	}
	button.no-state-styles {
		@apply focus:outline-none
            focus:shadow-none;
	}

	/* BLOCKQUOTE */
	blockquote p {
		@apply font-black
            tracking-widest
            leading-7
            tablet:leading-8
            uppercase;
	}
	blockquote .quote {
		font-size: 12rem;
		@apply mr-2 font-body absolute -top-5 -left-10 -z-1 leading-none;
	}
	cite {
		@apply mt-7;
	}
	cite span {
		@apply not-italic
            text-labelLarge
            font-black
            uppercase
            dark:text-white;
	}

	/* SMALLER COMPONENTS */
	.label {
		@apply font-body
            font-light
            text-labelLarge 
            laptop:text-labelLarge2 
            desktop:text-labelLarge3 
            uppercase
            dark:text-gray;
	}

	/* SCROLL INDICATOR */
	.scrollContainer {
		@apply absolute bottom-0 w-full bg-gray;
	}
	.scrollFill {
		@apply bg-blue h-2 w-3;
	}
}



@layer utilities {
	.mix-blend-multiply::before {
		@apply bg-purple;
		mix-blend-mode: multiply;
	}
	.mix-blend-darken {
		mix-blend-mode: darken;
	}
	.mix-blend-screen {
		mix-blend-mode: screen;
	}
}

